modified:   CSS/styles.css 	modified:   index.html 	modified:   portfolio.html

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,18 @@
     --Light:#F4F4FD;
     --bgc-white: #fff;
 }
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
 
 body {    
     color: var(--_text);
@@ -35,6 +47,7 @@ body {
 }
 
 .header {
+
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
