modified:   CSS/styles.css

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -373,8 +373,8 @@ body {
 }
 
 .protfolio .card-content {
-    padding-left:  20px;
-    padding-right: 20px;
+    margin-left:  20px;
+    margin-right: 20px;
 }
 
 /* .image {} */
