--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -345,15 +345,15 @@ body {
 }
 
 .protfolio .card-item {
-    /* border: 0.5px solid #F4F4FD; */
-    width: calc((100% - 48px) / 3);
+    border: 0.5px solid #F4F4FD;
+    width: calc((100% - 51px) / 3);
     margin-bottom: 24px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .protfolio .card-item:hover,
 .protfolio .card-item:focus {
-    /* border: 0.5px solid #F4F4FD; */
+    border: 0.5px solid #F4F4FD;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
