--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,6 +33,11 @@ p,
 ul {
     margin-top: 0;
     margin-bottom: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
 }
 
 body {    
@@ -41,7 +46,6 @@ body {
     font-family: 'roboto', 'sans-serif';
     font-size: 16px;
     font-weight: 400;
-    max-width: 1440px;
     margin: 0 auto;
 }
 
@@ -69,15 +73,14 @@ body {
 
 .header {
     background: #FFFFFF;
-    max-width: 1440px;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     position: sticky;
-    top: -1px;
+    /* top: -1px; */
 }
 
 .container {
-    max-width: 1152px;
-    padding: 0 12px;;
+    max-width: 1158px;
+    padding: 0 15px;
     margin: 0 auto;
 }
 
@@ -174,11 +177,10 @@ body {
 }
 
 /*------------------- title section styles */
-.main>.container {
+.main.section {
     background-color: var(--Dark);
     text-align: center;
     padding: 190px 0;
-    max-width: 1440px;
 }
 
 .main-title {
@@ -187,6 +189,8 @@ body {
     line-height: 1.07;
     text-align: center;
     color: var(--bgc-white);
+    max-width: 492px;
+    margin: 0 auto;
 }
 
 .order-btn {
@@ -212,10 +216,6 @@ body {
     background-color: var(--order-active);
 }
 
-/* .order-btn:active {
-    background: var(--order-active);
-} */
-
 /*------------------- Our benefits section */
 
 .benefits.section {
@@ -226,6 +226,10 @@ body {
     display: flex;
 }
 
+.benefits .card-item {
+    max-width: 264px;
+}
+
 .card-list {
     display: flex;
 }
@@ -234,7 +238,7 @@ body {
     margin-right: 24px;
 }
 
-.card-item>.title {
+.card-item .title {
     margin-bottom: 8px;
 }
 
@@ -272,7 +276,7 @@ body {
 }
 
 .card-content {
-    margin: 32px 0;
+    padding: 32px 0;
 }
 
 /*------------------- Footer section styles */
@@ -345,15 +349,13 @@ body {
 }
 
 .protfolio .card-item {
-    border: 0.5px solid #F4F4FD;
-    width: calc((100% - 48px) / 3);
-    margin-bottom: 24px;
+    max-width: calc((100% - 48px) / 3);
+    margin-bottom: 48px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .protfolio .card-item:hover,
 .protfolio .card-item:focus {
-    border: 0.5px solid #F4F4FD;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -373,12 +375,9 @@ body {
 }
 
 .protfolio .card-content {
-    margin-left:  20px;
-    margin-right: 20px;
+    padding-left:  20px;
+    padding-right: 20px;
+    border: 0.5px solid #F4F4FD;
 }
-
-/* .image {} */
-
-/* .title {} */
 
 /* .filter-tag {} */
