--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -375,6 +375,7 @@ body {
     padding-left:  20px;
     padding-right: 20px;
     border: 0.5px solid #F4F4FD;
+    border-top: none;
 }
 
 /* .filter-tag {} */
